--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "morgan": "^1.8.2"
   },
