--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./client/**/*.js ./server/**/*.js",
+    "build": "webpack",
     "start": "node ./bin/www"
   },
   "author": "umatoma <umatomakun@gmail.com>",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.3.0"
+    "eslint-plugin-import": "^2.3.0",
+    "webpack": "^3.0.0"
   }
 }
