画面のリサイズイベントに応じてcanvasサイズを変更

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "globals": {
     "fabric": true,
-    "document": true
+    "document": true,
+    "window": true
   }
 }
