goodby fabric, hello konva

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "^2.6.8",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "fabric": "^1.7.14",
+    "konva": "^1.6.3",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
