--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./client/**/*.js ./server/**/*.js",
     "build": "webpack",
+    "watch": "webpack --progress --watch",
     "start": "node ./bin/www"
   },
   "author": "umatoma <umatomakun@gmail.com>",
