--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
     "ejs": "^2.5.6",
+    "eventemitter3": "^2.0.3",
     "express": "^4.15.3",
     "konva": "^1.6.3",
     "morgan": "^1.8.2",
