--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
