--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   },
   "rules": {
     "no-console": "off",
+    "max-len": ["error", 128],
     "jsx-a11y/label-has-for": "off",
     "react/forbid-prop-types": "off",
   }
